rspec-tools/tests/resources/invalid-rules/S200/csharp/rule.adoc
// Pitfalls appears twice
== Why is this an issue?
== How to fix it in Razor
=== Pitfalls
=== How does this work?
=== Going the extra mile
=== Pitfalls


